# alpha_rover

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENT_CONTEXT.md  ALPHA_STACK_DESIGN.md  ALPHA_Software_Roadmap_v2.3.md  Airy nvblox integration reference.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUAL_AIRY_SETUP.md  LICENSE  LiDAR_to_NVBlox_Roadmap.md  Makefile  OAK_MULTI_SENSOR_LAUNCH.md  PROGRESS.md  README.md  RESTORE.md  SECURITY.md  channel_distance_table.csv  oak_map_run.out  pytest.ini  ros2.repos  ros2_ws
alpha_configs/: AGENTS.md  airy_vertical_angles.csv  bandwidth_budgets.yaml  bridge_mcu_0_42.yaml  calibration_bounds.yaml  degrade_policies.yaml  dock_config.yaml  extrinsics_current.yaml  failure_domains.yaml  lidar_airy.yaml  mapping_provider.yaml  modes.yaml  network.yaml  oak_cams.yaml  recorder_profiles.yaml  startup_sequence.yaml  thermal_policy.yaml  time_sync.yaml
alpha_ops/: README.md  agent-hello.sh  backup-now.sh  backup_data.sh  backup_manifest.sh  backup_repos.sh  data_paths.txt  enable-backups.sh  repo_roots.txt  restic.env  restic.env.example  restic_init.sh  setup_rclone.sh
alpha_ws/src/alpha_bringup/: AGENTS.md  package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_bringup/alpha_bringup/: config_manager.py  lidar_ready_gate.py  mapping_autostart.py  startup_sequencer.py
alpha_ws/src/alpha_bringup/launch/: startup.launch.py
alpha_ws/src/alpha_bringup/resource/: alpha_bringup
alpha_ws/src/alpha_comms/: package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_comms/alpha_comms/: degrade_manager_node.py  video_budget_applier_node.py  video_controller_node.py
alpha_ws/src/alpha_comms/test/: test_degrade_manager.py
alpha_ws/src/alpha_lidar_airy/: AGENTS.md  package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_lidar_airy/alpha_lidar_airy/: mode_service_node.py  reorder_node.py
alpha_ws/src/alpha_lidar_airy/launch/: airy_bringup.launch.py
alpha_ws/src/alpha_lidar_airy/test/: test_reorder.py
alpha_ws/src/alpha_lidar_airy_cpp/: AGENTS.md  CMakeLists.txt  README.md  package.xml
alpha_ws/src/alpha_lidar_airy_cpp/src/: reorder_node.cpp
alpha_ws/src/alpha_mapping/: AGENTS.md  CMakeLists.txt  package.xml  plugin_description.xml
alpha_ws/src/alpha_mapping/include/alpha_mapping/: provider_interface.hpp
alpha_ws/src/alpha_mapping/launch/: nvblox_provider.launch.py
alpha_ws/src/alpha_mapping/src/: mapping_node.cpp  nvblox_dummy_node.cpp  nvblox_provider.cpp
alpha_ws/src/alpha_observability/: AGENTS.md  package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_observability/alpha_observability/: latency_feeders.py  slo_publisher.py
alpha_ws/src/alpha_observability/resource/: alpha_observability
alpha_ws/src/alpha_orchestrator/: AGENTS.md  package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_orchestrator/alpha_orchestrator/: orchestrator_node.py
alpha_ws/src/alpha_orchestrator/resource/: alpha_orchestrator
alpha_ws/src/alpha_platforms/leo_rover/: AGENTS.md  package.xml  setup.cfg  setup.py
alpha_ws/src/alpha_platforms/leo_rover/config/: leo_rover.yaml
alpha_ws/src/alpha_platforms/leo_rover/launch/: leorover_adapter.launch.py
alpha_ws/src/alpha_platforms/leo_rover/src/alpha_platforms/: __init__.py
alpha_ws/src/alpha_platforms/leo_rover/src/alpha_platforms/leo_rover/: adapter_node.py
alpha_ws/src/alpha_platforms/leo_rover/tests/: test_config.py
alpha_ws/src/alpha_platforms/leo_rover/urdf/: leo_rover_min.urdf.xacro
alpha_ws/src/alpha_utils/: CMakeLists.txt  package.xml
alpha_ws/src/alpha_utils/msg/: DegradeBudget.msg  DomainHealth.msg  Event.msg  Health.msg  Heartbeat.msg  LidarState.msg  ModeState.msg  Power.msg
alpha_ws/src/alpha_utils/srv/: GetConfig.srv  ModeSet.srv  OrchestratorCommand.srv  SetLidarMode.srv  TriggerRecord.srv
deploy/: compose.ab.yaml  compose.ba.yaml  compose.mapping.yaml  compose.vslam.yaml
docs/: AGENTS_INDEX.md  AGENTS_STYLE.md  AGENTS_TEMPLATE.md  ARCHITECT_UPDATE_2025-09-11.md  CODEX_HANDOFF.md  DEPLOY_ENV.md  INTEGRATION_SENSORS.md  NETWORKING.md  PROGRESS.md  agents.schema.json  codex_start_alpha_rover.md  ui_parameters.md
examples/: alpha_lidar_airy_AGENTS.md
ros2_ws/: log_nvblox_map.txt
ros2_ws/src/lidar_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/lidar_tools/lidar_tools/: pc_repack.py
ros2_ws/src/lidar_tools_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_tools_cpp/src/: pc_reorder.cpp
ros2_ws/src/oak_multi_bringup/: CMakeLists.txt  NEXT_STEPS.md  README.md  package.xml
ros2_ws/src/oak_multi_bringup/config/: foxglove_qos.yaml  oak_multi.yaml  oak_pro_only.yaml  oak_sr_only.yaml
ros2_ws/src/oak_multi_bringup/launch/: foxglove_bridge.launch.py  oak_multi.launch.py  oak_pro.launch.py  oak_sr.launch.py  robot_state.launch.py
ros2_ws/src/oak_multi_bringup/scripts/: airy_boot_standby.sh  launch_all.sh  lidar_debug.sh  oak  oak_check.sh  oak_lidar.py  oak_sanity.sh  setup_oak_command.sh  wait_for_cloud.py  wait_for_topic.py
ros2_ws/src/oak_multi_bringup/systemd/: airy-standby.service
ros2_ws/src/oak_multi_bringup/urdf/: oak_sensors.urdf.xacro
ros2_ws/src/oak_nvblox_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/oak_nvblox_bringup/config/: nvblox_from_oak.yaml
ros2_ws/src/oak_nvblox_bringup/launch/: nvblox_dual_cams_with_lidar.launch.py  nvblox_from_oak.launch.py  nvblox_from_oak_with_dual_lidar.launch.py  nvblox_from_oak_with_lidar.launch.py  nvblox_lidar_only.launch.py
ros2_ws/src/oak_nvblox_bringup/scripts/: pointcloud_merge.py  pointcloud_qos_bridge.py
ros2_ws/src/oak_temp_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/oak_temp_bridge/launch/: oak_temp_bridge.launch.py
ros2_ws/src/oak_temp_bridge/oak_temp_bridge/: bridge_node.py
ros2_ws/src/sensor_health_monitor/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensor_health_monitor/config/: thermals.yaml
ros2_ws/src/sensor_health_monitor/launch/: thermals.launch.py
ros2_ws/src/sensor_health_monitor/sensor_health_monitor/: jetson_thermals_node.py
scripts/: agents_index.py  agents_validate.py  jetson_coordinator.py  pin_isaac_image.sh  (+3 more)
(+67 files in other folders)
