<?xml version="1.0"?>
<package format="3">
  <name>alpha_comms</name>
  <version>0.1.0</version>
  <description>Comms manager and degrade policy executor (skeleton).</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>alpha_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

