<?xml version="1.0"?>
<package format="3">
  <name>alpha_lidar_airy_cpp</name>
  <version>0.1.0</version>
  <description>High-performance C++ reorder node for RoboSense AIRY organized clouds.</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

