<?xml version="1.0"?>
<package format="3">
  <name>alpha_mapping</name>
  <version>0.1.0</version>
  <description>Mapping provider interface and plugins for ALPHA (skeleton).</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

