<?xml version="1.0"?>
<package format="3">
  <name>alpha_mapping</name>
  <version>0.1.0</version>
  <description>Mapping provider interface and plugins for ALPHA (skeleton).</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>alpha_utils</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>alpha_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="share/${prefix}/plugin_description.xml"/>
  </export>
</package>
