<?xml version="1.0"?>
<package format="3">
  <name>alpha_observability</name>
  <version>0.1.0</version>
  <description>SLO metrics and diagnostic publishers for ALPHA (skeleton).</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

