<?xml version="1.0"?>
<package format="3">
  <name>alpha_orchestrator</name>
  <version>0.1.0</version>
  <description>Failure domains and recovery orchestrator (skeleton).</description>
  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>alpha_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

