<?xml version="1.0"?>
<package format="3">
  <name>alpha_utils</name>
  <version>0.1.0</version>
  <description>Common messages and services for the ALPHA rover stack.</description>

  <maintainer email="devnull@example.com">Alpha SW</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>

