<?xml version="1.0"?>
<package format="3">
  <name>lidar_tools</name>
  <version>0.1.0</version>
  <description>Utilities for LiDAR pointcloud republishing and reshaping.</description>
  <maintainer email="alpha_orin@example.com">alpha_orin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
