<?xml version="1.0"?>
<package format="3">
  <name>lidar_tools_cpp</name>
  <version>0.1.0</version>
  <description>Lightweight C++ LiDAR utilities (row reorder by vertical angles)</description>
  <maintainer email="devnull@example.com">alpha</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

