<?xml version="1.0"?>
<package format="3">
  <name>oak_nvblox_bringup</name>
  <version>0.1.0</version>
  <description>Bringup to run Isaac ROS nvblox with OAK-D Pro depth + base_link TF.</description>
  <maintainer email="alpha_orin@example.com">alpha_orin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
