<?xml version="1.0"?>
<package format="3">
  <name>sensor_health_monitor</name>
  <version>0.1.0</version>
  <description>Lightweight system/sensor health monitor for Jetson and peripherals</description>
  <maintainer email="alpha_orin@example.com">alpha_orin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
